# recsys-course

./: .dockerignore  .gitignore  Dockerfile  MLproject  pyproject.toml  test.sh  train.sh  workspace.code-workspace
common/: pyproject.toml
common/common/: abstract.py  data.py  doc2vec.py  metrics.py  preprocess.py  split.py  tuning.py
common/tests/: test_data.py  test_metrics.py  test_optimizer.py
models/: pyproject.toml
models/models/: loader.py
models/models/boost/: __init__.py  catboost.py  xgboost.py
models/models/hybrid/: __init__.py  simple.py  two_stage.py
models/models/lightfm/: __init__.py  featured.py  simple.py
models/models/popular/: __init__.py  segment.py  simple.py
models/models/xgboost/: __init__.py  simple.py
models/tests/: test.py  test_hybrid.py  test_lightfm.py  test_popular_segment.py
notebooks/: Data.ipynb  Manual-Copy1.ipynb  Manual-Submission.ipynb  Manual.ipynb  RecSys notebook Baseline.ipynb  RecSys notebook EDA.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb
recsys_course/: README.md  const.py  preprocess.py  test.py  train.py  train_folds.py  trainer.py
recsys_course/tests/: test_preprocess.py  test_train.py
