[tool.poetry]
name = "common"
version = "0.1.0"
description = ""
authors = ["Danil Emelyanov <danil3d@mail.ru>"]

[tool.poetry.dependencies]
python = "~3.9.0"
pandas = "^1.3.4"
numpy = "^1.21.4"
more-itertools = "^8.12.0"
optuna = "^2.10.0"
gensim = "^4.1.2"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
